User component text misalignment issue on change in screen size resolved

--- a/app/react/components/sizung/components/User/index.css
+++ b/app/react/components/sizung/components/User/index.css
@@ -2,27 +2,15 @@
   position: relative;
   border-radius: 50%/50%;
   background-color: #eeeeee;
-}
-
-.circle-badge-initials {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
   text-align: center;
   color: #777777;
 }
+
 
 .circle-badge-normal {
   composes: circle-badge;
   width: 30px;
   height: 30px;
-}
-
-.circle-badge-normal-initials {
-  composes: circle-badge-initials;
-  font-size: small;
   line-height: 30px;
 }
 
@@ -30,10 +18,6 @@
   composes: circle-badge;
   width: 40px;
   height: 40px;
-}
-
-.circle-badge-large-initials {
-  composes: circle-badge-initials;
   font-size: larger;
   line-height: 40px;
 }
